--- a/File_queue/stylesheet.css
+++ b/File_queue/stylesheet.css
@@ -1,4 +1,6 @@
-
+header {
+  font-size: 30px;
+}
 
 table.a {
   opacity: 1;
@@ -6,7 +8,7 @@ table.a {
   max-width: 70rem;
   border: solid 1px black;
   border-radius: 25px;
-  color: #05330B;
+  color: #2d333a;
   padding: 1rem;
 
 }
@@ -15,7 +17,7 @@ th.a {
   text-align: left;
   max-height: 35px;
   border-bottom: 1px solid #ddd;
-  background-color: #8DFC98;
+  background-color: #9fbfdf;
 }
 th.a:first-child {border-top-left-radius: 18px;}
 th.a:last-child {border-top-right-radius: 18px;}
